<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EvernoteWorkshops</string>
    <string name="action_settings">Settings</string>
    <string name="menu_create">Create</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="label_token">Token:</string>
    <string name="action_get_notebooks">Get Notebooks</string>
    <string name="action_create_mode">Create Mode</string>
    <string name="label_notebook_name">Notebook Name:</string>
    <string name="label_note_name">Note Name:</string>
    <string name="label_note_content">Note Content:</string>
    <string name="create">Create</string>

</resources>

